# tech-card

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/: settings.json
backend/: main.py  paths.py
config/: images.yaml  images.yaml.example  llm.yaml  llm.yaml.example  sources.yaml
docs/: card-news-verification-2026-03-18.md  card-news-verification-checklist.md  newsletter-2025-03-01-verification-report.md  newsletter-date-filter.md  sources-api-vs-crawl.md  sources-non-api-strategy.md
frontend/: index.html  package-lock.json
pipeline/: __init__.py  __main__.py  agents.py  card_backgrounds.py  card_generate.py  checkpoint.py  collect.py  config.py  dedup.py  feedback_store.py  git_push.py  image_config.py  letter_generate.py  ops_logging.py  prompt_evolution.py  prompt_version_store.py  publish.py  run_status.py  runner.py  storage.py  weekly_runner.py
scripts/: run-dev.sh  scheduler.py
skills/: analyze.md  card_generate.md  card_theme.md  collect.md  dedup.md  letter_generate.md  publish.md  summarize.md  weekly_analyze.md  weekly_generate.md
tests/: test_agents.py  test_checkpoint.py  test_collect.py  test_config.py  test_dedup.py  test_feedback_store.py  test_fetch_hnrss.py  test_fetch_rss.py  test_llm_client.py  test_llm_config.py  test_main_observability.py  test_operational_logging.py  test_pipeline_router.py  test_run_dev_script.py  test_run_status.py  test_runner.py  test_storage.py  test_weekly_router.py  test_weekly_runner.py
tools/: __init__.py  fetch_crawl.py  fetch_hnrss.py  fetch_rdt.py  fetch_reddit_rss.py  fetch_rss.py  (+2 more)
(+475 files in other folders)
